--- a/src/App.css
+++ b/src/App.css
@@ -68,7 +68,7 @@
   z-index: 3;
   top: 45px;
   display: flex;
-  gap: 30px;
+  gap: 90px;
   justify-content: space-between;
   align-items: center;
   padding: 18px 0 19.17px 20px;
@@ -266,8 +266,6 @@
 }
 
 .menu-icons {
-  position: fixed;
-  bottom: 0px;
   height: 50px;
   border-bottom-left-radius: 25px;
   border-bottom-right-radius: 25px;
@@ -284,4 +282,18 @@
   text-align: center;
   font-family: "Sharp Grotesk";
   font-size: 12px;
+}
+
+
+.gallery-container {
+  margin-top: 6px;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(100px, 1fr)); /* Change 200px to your desired image width */
+  grid-gap: 2px;
+}
+
+.gallery-image {
+  width: 100%;
+  height: 202px;
+  object-fit: cover;
 }
